[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yellow-box-phish"
version = "2.0.0"
description = "Multi-Platform Phishing & Command Center"
authors = [
    {name = "Ian Carter Kulani", email = "ian@yellowbox.phish"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 120
ignore = ["E501", "F401", "W503"]
per-file-ignores = {}

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "dist", "build"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=yellow_box_phish --cov-report=html --cov-report=term"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.coverage.run]
source = ["yellow_box_phish"]
omit = ["test_*.py", "venv/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]